--- a/client/src/components/LoginForm/LoginForm.css
+++ b/client/src/components/LoginForm/LoginForm.css
@@ -93,3 +93,43 @@
   text-align: center;
   margin-top: 20px;
 }
+
+.created-login {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+  font-size: large;
+}
+
+.created-login .box {
+  background-color: #333;
+  color: white;
+  padding: 30px 40px;
+  border-radius: 10px;
+  border-color: #FFF;
+  border-style: solid;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  min-width: 300px;
+}
+
+.created-login .box .button {
+  margin-top: 15px;
+  width: 100%;
+  height: 45px;
+  background-color: #FFF;
+  border: none;
+  outline: none;
+  border-radius: 40px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  font-weight: 700;
+}
